--- a/include/README
+++ b/include/README
@@ -1,5 +1,5 @@
 
-This directory is intended for project header files.
+Placeholder for project-specific header files.
 
 A header file is a file containing C declarations and macro definitions
 to be shared between several project source files. You request the use of a
