--- a/lib/README
+++ b/lib/README
@@ -1,2 +1,10 @@
-This directory is intended for project-specific private libraries. 
-Third-party dependencies (Blynk, TinyGPS++, etc.) are managed automatically via platformio.ini to ensure version consistency across different environments."
+# BINSAI Private Libraries
+
+This directory is reserved for project-specific local libraries developed for the BINSAI monitoring system. 
+
+## Library Management Policy
+To maintain research reproducibility and environment consistency:
+1. **External Dependencies:** All third-party libraries (e.g., Blynk, TinyGPSPlus, MQUnifiedsensor) are strictly managed via `platformio.ini`.
+2. **Local Modules:** This folder is used for modularizing BINSAI's custom algorithms if they exceed the scope of the main source files.
+
+Current status: All logic is currently maintained within `src/` for centralized execution flow.
